--- a/notebooks/1-COVID-19-EDA-solution.ipynb
+++ b/notebooks/1-COVID-19-EDA-solution.ipynb
@@ -243,7 +243,7 @@
    ],
    "source": [
     "# Import data & check it out\n",
-    "raw_data_confirmed = pd.read_csv(\"https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_19-covid-Confirmed.csv\")\n",
+    "raw_data_confirmed = pd.read_csv(\"https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_confirmed_global.csv")\n",
     "raw_data_confirmed.head()"
    ]
   },
