Add summaries to conclude each section

--- a/notebooks/1-COVID-19-EDA-solution.ipynb
+++ b/notebooks/1-COVID-19-EDA-solution.ipynb
@@ -143,6 +143,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Summary:** We've\n",
+    "- discussed reasons to give this tutorial and provided warnings about doing so\n",
+    "- discussed biases in data collection, data analyses, and data reporting,\n",
+    "- had a look at the github repository containing the JHU COVID-19 dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exploratory data analysis and visualization using Python"
    ]
   },
@@ -1727,7 +1737,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1794,6 +1806,18 @@
     "\n",
     "\n",
     "**ESSENTIAL POINT:** A logarithm scale is good for visualization **BUT** remember, in the thoughtful words of [Justin Bois](http://bois.caltech.edu/), \"on the ground, in the hospitals, we live with the linear scale. The flattening of the US curve, for example is more evident on the log scale, but the growth is still rapid on a linear scale, which is what we feel.\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Summary:** We've \n",
+    "- looked at the JHU data repository and imported the data,\n",
+    "- looked at the dataset containing the number of reported confirmed cases for each region,\n",
+    "- wrangled the data to look at the number of reported confirmed cases by country,\n",
+    "- plotted the number of reported confirmed cases by country (both log and semi-log),\n",
+    "- discussed why log plots are important for visualization and that we need to remember that we, as humans, families, communities, and society, experience COVID-19 linearly."
    ]
   },
   {
@@ -3393,6 +3417,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Summary:** We've \n",
+    "- looked at the dataset containing the number of reported deaths for each region,\n",
+    "- wrangled the data to look at the number of reported deaths by country,\n",
+    "- plotted the number of reported deaths by country (both log and semi-log),\n",
+    "- aligned growth curves to start with day of number of known deaths ≥ 25."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Plotting number of recovered people"
    ]
   },
@@ -3990,6 +4025,16 @@
    ],
    "source": [
     "plot_time_series(recovered_country_drop, 'Recovered Patients Time Series', 'Days', 'Recovered Patients count', True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Summary:** We've \n",
+    "- looked at the dataset containing the number of reported recoveries for each region,\n",
+    "- written function for grouping, wrangling, and plotting the data,\n",
+    "- grouped, wrangled, and plotted the data for the number of reported recoveries."
    ]
   },
   {
@@ -4855,17 +4900,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That's all for the time being. I'd be interested to see how you all can make these charts more information rich and comprehensible. I encourage you to raise ideas in issues on the issue tracker in [this github repository](https://github.com/hugobowne/COVID-19-EDA-tutorial) and then pull requests. A couple of ideas are\n",
-    "- Adding lines to the above chart that show curves for deaths doubling each X days, as in the [first chart here](https://www.nytimes.com/interactive/2020/03/21/upshot/coronavirus-deaths-by-country.html)\n",
-    "- Figuring out a way to make the chart less crowded with names by perhaps only showing 10 of them."
+    "**Summary:** We've \n",
+    "- melted the data into long format,\n",
+    "- used Altair to make interactive plots of increasing richness,\n",
+    "- admired the elegance & simplicity of the Altair API and the visualizations produced."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "That's all for the time being. I'd be interested to see how you all can make these charts more information rich and comprehensible. I encourage you to raise ideas in issues on the issue tracker in [this github repository](https://github.com/hugobowne/COVID-19-EDA-tutorial) and then to make pull requests. A couple of ideas are\n",
+    "- Adding lines to the above chart that show curves for deaths doubling each X days, as in the [first chart here](https://www.nytimes.com/interactive/2020/03/21/upshot/coronavirus-deaths-by-country.html),\n",
+    "- Figuring out a way to make the chart less crowded with names by perhaps only showing 10 of them."
+   ]
   }
  ],
  "metadata": {
