Add final flourishes
essentially notes about crowded data visualizations

--- a/notebooks/1-COVID-19-EDA.ipynb
+++ b/notebooks/1-COVID-19-EDA.ipynb
@@ -769,6 +769,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Note:** although we have managed to plot what we wanted, the above plots are challenging to retrieve any meaningful information from. There are too many growth curves so that it's very crowded **and** too many colours look the same so it's difficult to tell which country is which from the legend. Below, we'll plot less curves and further down in the notebook we'll use the python package Altair to introduce interactivity into the plot in order to deal with this challenge."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot semi log time series \n",
+    "ax = deaths_country_drop.plot(figsize=(20,10), linewidth=2, marker='.', fontsize=20, logy=True)\n",
+    "ax.legend(ncol=3, loc='upper right')\n",
+    "plt.xlabel('Days', fontsize=20);\n",
+    "plt.ylabel('Deaths Patients count', fontsize=20);\n",
+    "plt.title('Total reported coronavirus deaths for places with at least 25 deaths', fontsize=20);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Summary:** We've \n",
     "- looked at the dataset containing the number of reported deaths for each region,\n",
     "- wrangled the data to look at the number of reported deaths by country,\n",
@@ -917,6 +938,22 @@
    "outputs": [],
    "source": [
     "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note:** once again,  the above plots are challenging to retrieve any meaningful information from. There are too many growth curves so that it's very crowded **and** too many colours look the same so it's difficult to tell which country is which from the legend. Let's plot less curves and in the next section we'll use the python package Altair to introduce interactivity into such a plot in order to deal with this challenge."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_time_series(recovered_country_drop[poi], 'Recovered Patients Time Series', 'Days', 'Recovered Patients count', True)"
    ]
   },
   {
